fix bug 549457, handle imap servers that drop the connection on starttls, r/sr=standard8